authentik/manifests/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: authentik
    gethomepage.dev/icon: authentik
    gethomepage.dev/group: WAN
spec:
  hostnames:
    - authentik.secondhomelab.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: authentik-server
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      # Necessary for addition to solve "The request failed and the interceptors did not return an alternative response"
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
